去除不必要的类

--- a/paygeneralsdk/src/main/AndroidManifest.xml
+++ b/paygeneralsdk/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sdk.paygeneral">
+
+    <uses-sdk tools:overrideLibrary="com.thinkcore"></uses-sdk>
 
     <application
         android:allowBackup="true"
