--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.eotu.paydemo"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -20,14 +21,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCES_MOCK_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_GPS" />
 
-    <permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
-
-    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     <!-- <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"></uses-permission> -->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
@@ -52,10 +49,10 @@
         android:resizeable="true"
         android:smallScreens="true" />
 
-
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:name="com.eotu.paydemo.TestApplication"
         android:theme="@style/AppTheme" >
 
         <!-- weixin pay -->
@@ -78,13 +75,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sdk.paygeneral.weixin.wxapi.WXPayEntryActivity"
+            android:name="com.eotu.paydemo.wxapi.WXPayEntryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
-        <receiver android:name="com.sdk.paygeneral.weixin.WeiXinBroadcastReceiver" >
+        <receiver android:name="com.eotu.paydemo.wxapi.WeiXinBroadcastReceiver" >
             <intent-filter>
                 <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
             </intent-filter>
